--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
             <h2>QRcode</h2>
             <span>Generator</span>
             <form>
-                <label>Submit URL or text</label>
-                <input type="text" placeholder="Enter text or URL here ">
-                <button type="submit">Generate</button>
-             </form>
-             <div class="main-div1-div" id="main-div1-div"></div>
+                <label for="input">Submit URL or text</label>
+                <input id="input" type="text" placeholder="Enter text or URL here " name="input">
+                <button id="generate_btn" >Generate</button>
+            </form>
+            <div class="main-div1-div" id="main-div1-div"></div>
         </div>
     </main>
+    
     <script src="app.js"></script>
 </body>
 </html>
