fixing the js file

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <div class="main-div1">
             <h2>QRcode</h2>
             <span>Generator</span>
-            <form>
+            <div class="main-div1-div1">
                 <label for="input">Submit URL or text</label>
                 <input id="input" type="text" placeholder="Enter text or URL here " name="input">
                 <button id="generate_btn" >Generate</button>
-            </form>
-            <div class="main-div1-div" id="main-div1-div"></div>
+            </div>
+            <div class="main-div1-div2" id="main-div1-div2"></div>
         </div>
     </main>
     
